--- a/templates/default/graylog2-web-interface.init.erb
+++ b/templates/default/graylog2-web-interface.init.erb
@@ -3,16 +3,16 @@
 # Installed by Chef => graylog2::web-interface.rb
 
 ### BEGIN INIT INFO
-# Provides:          graylog2-web-interface
+# Provides:          <%= node[:graylog2][:web_service_name] %>
 # Required-Start:    $all
 # Required-Stop:     $all
 # Default-Start:     2 3 4 5
 # Default-Stop:      0 1 6
-# Short-Description: starts the graylog2 web
-# Description:       starts the graylog2 java server using the graylog2 control script
+# Short-Description: starts the <%= node[:graylog2][:web_service_name] %>
+# Description:       starts the <%= node[:graylog2][:web_service_name] %> using the <%= node[:graylog2][:web_service_name] %> control script
 ### END INIT INFO
 
-APP=graylog2-web-interface
+APP=<%= node[:graylog2][:web_service_name] %>
 APP_PATH=<%= node[:graylog2][:web_home] %>
 NOHUP=`which nohup`
 GRAYLOG2_PID=$APP_PATH/RUNNING_PID
@@ -22,16 +22,16 @@ test -x /usr/bin/java || exit 0
 set -e
 
 start() {
-  echo "Starting graylog2-web-interface ..."
+  echo "Starting $APP ..."
   cd $APP_PATH/bin
-  $NOHUP ./graylog2-web-interface -mem <%= node[:graylog2][:web_mem] %> &
+  $NOHUP ./$APP -mem <%= node[:graylog2][:web_mem] %> &
 }
 
 stop() {
   if [ -f $GRAYLOG2_PID ];
   then
     PID=`cat ${GRAYLOG2_PID}`
-    echo "Stopping graylog2-web-interface ($PID) ..."
+    echo "Stopping $APP ($PID) ..."
     kill $PID
   fi
 }
@@ -46,7 +46,7 @@ status() {
   PID=`cat ${GRAYLOG2_PID}`
   if [ ! -z $PID ]; then
     if pid_running $PID; then
-      echo "graylog2-web-interface running as pid $PID"
+      echo "$APP running as pid $PID"
       return 0
     else
       echo "Stale pid file with $PID - removing..."
@@ -54,7 +54,7 @@ status() {
     fi
   fi
 
-  echo "graylog2-web-interface not running"
+  echo "$APP not running"
 }
 
 pid_running() {
