--- a/templates/default/graylog2-web-interface.conf.erb
+++ b/templates/default/graylog2-web-interface.conf.erb
@@ -15,3 +15,5 @@ application.secret="<%= node[:graylog2][:server_password_secret] %>"
 # Graylog2 stores all timestamps in UTC. To properly display times, set the default timezone of the interface.
 # If you leave this out, Graylog2 will pick your system default as the timezone. Usually you will want to configure it explicitly.
 timezone="<%= node[:graylog2][:web_tz] %>"
+
+application.context="<%= node[:graylog2][:web_context] %>"
