--- a/templates/default/graylog2-server.conf.erb
+++ b/templates/default/graylog2-server.conf.erb
@@ -1,6 +1,6 @@
 # If you are running more than one instances of graylog2-server you have to select one of these
 # instances as master. The master will perform some periodical tasks that non-masters won't perform.
-is_master = true
+is_master = <%= node[:graylog2][:server_is_master] %>
 
 # The auto-generated node ID will be stored in this file and read after restarts. It is a good idea
 # to use an absolute file path here if you are starting graylog2-server from init scripts or similar.
