--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -1,9 +1,9 @@
 server {
   listen <%= node[:graylog2][:nginx_port] %>;
 
-  location <%= node[:graylog2][:nginx_location] %> {
+  location <%= node[:graylog2][:web_context] %> {
 
-    proxy_pass              <%= node[:graylog2][:web_url] %>;
+    proxy_pass              http://localhost:9000<%= node[:graylog2][:web_context] %>;
     proxy_set_header        Host $host;
     proxy_set_header        X-Real-IP $remote_addr;
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
