--- a/templates/default/graylog2-server.conf.erb
+++ b/templates/default/graylog2-server.conf.erb
@@ -114,10 +114,12 @@ ring_size = 1024
 mongodb_useauth = <%= node[:graylog2][:server_mongodb_auth] %>
 mongodb_user = <%= node[:graylog2][:server_mongodb_username] %>
 mongodb_password = <%= node[:graylog2][:server_mongodb_password] %>
-mongodb_host = 127.0.0.1
-#mongodb_replica_set = localhost:27017,localhost:27018,localhost:27019
-mongodb_database = graylog2
-mongodb_port = 27017
+mongodb_host = <%= node[:graylog2][:server_mongodb_host] %>
+<% if node[:graylog2][:server_mongodb_replica_set] %>
+mongodb_replica_set = <%= node[:graylog2][:server_mongodb_replica_set] %>
+<% end %>
+mongodb_database = <%= node[:graylog2][:server_mongodb_database] %>
+mongodb_port = <%= node[:graylog2][:server_mongodb_port] %>
 
 # Raise this according to the maximum connections your MongoDB server can handle if you encounter MongoDB connection problems.
 mongodb_max_connections = 100
