--- a/templates/default/graylog2-server.conf.erb
+++ b/templates/default/graylog2-server.conf.erb
@@ -4,7 +4,7 @@ is_master = <%= node[:graylog2][:server_is_master] %>
 
 # If you are running graylog2-server behind a firewall without access to the internet,
 # you can turn off the version checks (done by the master) by setting the following to false.
-versionchecks = <%= node[:graylog2][:versionchecks] %>
+versionchecks = <%= node[:graylog2][:server_versionchecks] %>
 
 # The auto-generated node ID will be stored in this file and read after restarts. It is a good idea
 # to use an absolute file path here if you are starting graylog2-server from init scripts or similar.
