Allow graylog2-server to be started under specified user

--- a/templates/default/graylog2-server.init.erb
+++ b/templates/default/graylog2-server.init.erb
@@ -24,24 +24,24 @@ case "$1" in
   start)
     echo -n "Starting $DESC: "
     cd $BINDIR
-    ./graylog2ctl start
+    su - <%= node[:graylog2][:server_user] %> -c "./graylog2ctl start"
     echo "...started."
   ;;
   stop)
     echo -n "Stopping $DESC: "
     cd $BINDIR
-    ./graylog2ctl stop
+    su - <%= node[:graylog2][:server_user] %> -c "./graylog2ctl stop"
     echo "...stopped."
   ;;
   status)
     echo -n "Restarting $DESC: "
     cd $BINDIR
-    ./graylog2ctl status
+    su - <%= node[:graylog2][:server_user] %> -c "./graylog2ctl status"
   ;;
   restart)
     echo -n "Restarting $DESC: "
     cd $BINDIR
-    ./graylog2ctl restart
+    su - <%= node[:graylog2][:server_user] %> -c "./graylog2ctl restart"
     echo "...restarted."
   ;;
   *)
