--- a/templates/default/graylog2-web-interface.init.erb
+++ b/templates/default/graylog2-web-interface.init.erb
@@ -23,8 +23,7 @@ set -e
 
 start() {
   echo "Starting $APP ..."
-  cd $APP_PATH/bin
-  su - <%= node[:graylog2][:web_user] %> -c "$NOHUP ./$APP -mem <%= node[:graylog2][:web_mem] %> -Dpidfile.path=$GRAYLOG2_PID &"
+  su - <%= node[:graylog2][:web_user] %> -c "cd $APP_PATH/bin ; $NOHUP ./$APP -mem <%= node[:graylog2][:web_mem] %> -Dpidfile.path=$GRAYLOG2_PID &"
 }
 
 stop() {
